# tg-streaks

./: .gitattributes  .gitignore
.claude/skills/i18n-keys/: SKILL.md
.claude/skills/i18n-keys/scripts/: i18n_tool.py
.githooks/: pre-commit
.github/workflows/: docs.yml  release.yml
dex/: .gitignore  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
dex/gradle/: libs.versions.toml
dex/gradle/wrapper/: gradle-wrapper.properties
dex/src/main/i18n/: Strings_en.properties  Strings_ru.properties
dex/src/main/kotlin/ru/n08i40k/streaks/: ChatContextMenuActions.kt  Plugin.kt  ReflectionUtils.kt  SettingsMenuActions.kt
dex/src/main/kotlin/ru/n08i40k/streaks/chat_history_fetcher/: CachedChatHistoryFetcher.kt  (+2 more)
dex/tools/: FixTelegramJar.java
docs/: mdx-components.tsx  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
docs/app/: layout.tsx
docs/app/[[...mdxPath]]/: page.tsx
docs/components/: Screenshot.tsx
docs/content/: _meta.ts  backups.mdx  chat-menu.mdx  control-panel.mdx  faq.mdx  index.mdx  installation.mdx  settings.mdx  updates.mdx
docs/content/features/: _meta.ts  emoji-badge.mdx  rebuild.mdx  service-messages.mdx  streak-pet.mdx  streaks.mdx
plugin/: .gitignore  .nvim.lua  pyproject.toml  tg-streaks.py
resources/streak-pet/: fab.html  points-100.webm  points-300.webm  points-500.webm  points-900.webm  sheet.html
resources/upgrade-popups/: 10.webm  100.webm  200.webm  3.webm  30.webm
scripts/: generate_emoji_variants.py  prepare_release.py  rebuild_popup_webp_alpha.py  transform_plugin_urls.py
(+139 files in other folders)
