[project]
name = "tg-streaks"
version = "2.7.3"
description = "Exteragram plugin for streaks with your friends"
requires-python = ">=3.14"
dependencies = [
    "debugpy>=1.8.20",
    "exteragram-utils>=0.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.15",
]

[tool.ty.environment]
extra-paths = ["stubs"]
